Replace Desktop#browse